--- a/CatansyAPI/CatansyAPI/appsettings.json
+++ b/CatansyAPI/CatansyAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "k4t4nsy-jwt-key-testing-2025-05-18-change-later"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CatansyDB;Trusted_Connection=True;"
+  }
 }
