CEV-9 Create controller tests

--- a/CatansyAPI/Catansy.Tests/Catansy.Tests.csproj
+++ b/CatansyAPI/Catansy.Tests/Catansy.Tests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Catansy.Applicaton\Catansy.Applicaton.csproj" />
+    <ProjectReference Include="..\CatansyAPI\Catansy.API.csproj" />
   </ItemGroup>
 
 </Project>
