CAT-1 1 Upgrade to NET 9

--- a/CatansyAPI/Catansy.API/Properties/launchSettings.json
+++ b/CatansyAPI/Catansy.API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "http": {
+    "Catansy.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
