--- a/CatansyAPI/Catansy.Tests/Catansy.Tests.csproj
+++ b/CatansyAPI/Catansy.Tests/Catansy.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Catansy.API\Catansy.API.csproj" />
     <ProjectReference Include="..\Catansy.Applicaton\Catansy.Applicaton.csproj" />
-    <ProjectReference Include="..\CatansyAPI\Catansy.API.csproj" />
   </ItemGroup>
 
 </Project>
